# canner

./: .gitignore  .gitmodules  Makefile.am  README.md  TODO.md  autogen.sh  callbacks.c  canner.c  canner.h  configure.ac  http_cb.h.in  libtool  main.c  main.h.in  main_template.in  options.c  site.h.in  site_template.in  static_cb.h.in  static_cb_template.in  util.c
examples/: .gitignore  Makefile  Makefile.am  README.md  api.c  auden.txt  configure.ac  site.h
examples/dynamic/: dice.c
examples/static/: index.html
examples/static/foo/: bar.html  index.html
examples/test/: .gitignore  test-dice.c
src/: .gitignore  Makefile.am  canner.c  html_cb.h.in  http_cb.h.in  main.h.in  mkh.sh
test/: .gitignore  Makefile.am  it-compiles.test  it-generates-code.test  it-listens.test  it-runs.test  it-serves-with-custom.test  it-serves-with-prefix.test  it-serves.test  test-examples-dice.c
