check_SCRIPTS = it-serves.test it-serves-with-prefix.test it-serves-with-custom.test

TEST_EXTENSIONS = .test

TESTS = $(check_SCRIPTS)

dist_noinst_SCRIPTS = $(check_SCRIPTS)

it-serves.log: ../examples/site

it-serves-with-prefix.log: ../examples/site-with-prefix

it-serves-with-custom.log: ../examples/site-with-custom